[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/SmallStar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/GenerateAsteroids.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scripts/Stars.gd" type="Script" id=3]
[ext_resource path="res://Objects/Asteroid.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/LargeStar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Scripts/Main Menu.gd" type="Script" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/PressStart2P-vaV7.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 37
font_data = ExtResource( 6 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Stars" type="Node" parent="."]
script = ExtResource( 3 )
stars = [ ExtResource( 1 ), ExtResource( 5 ) ]
quanity = 30

[node name="Asteroids" type="Node" parent="."]
script = ExtResource( 2 )
amount = 20
Obj = ExtResource( 4 )

[node name="Play" type="Button" parent="."]
anchor_left = 0.375977
anchor_top = 0.431667
anchor_right = 0.563477
anchor_bottom = 0.531667
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="About" type="Button" parent="."]
anchor_left = 0.375977
anchor_top = 0.536667
anchor_right = 0.563477
anchor_bottom = 0.633333
custom_fonts/font = SubResource( 3 )
text = "About"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.375977
anchor_top = 0.64
anchor_right = 0.563477
anchor_bottom = 0.741667
margin_top = -3.05176e-05
custom_fonts/font = SubResource( 4 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.202148
anchor_top = 0.125
anchor_right = 0.780273
anchor_bottom = 0.331667
custom_fonts/font = SubResource( 5 )
text = "ERROR 404: 
Bounty Not Found"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
